refactor: sync user
--story=1022183@tapd-34675357 --user=王旭 【系统】组织架构支持自动同步第三方组织架构信息 https://www.tapd.cn/34675357/s/2084179